# Dx12Engine

./: .gitignore  CMakeLists.txt  README.md
Dx12Engine/: CMakeLists.txt  main.cpp
Dx12Engine/api/player/: Player.cpp  Player.hpp
Dx12Engine/core/: ConsoleLogger.hpp  Types.hpp
Dx12Engine/core/camera/: Camera.cpp  Camera.hpp
Dx12Engine/core/engine/: Engine.cpp  Engine.hpp
Dx12Engine/core/graphicsDevice/: GraphicsDevice.cpp  GraphicsDevice.hpp
Dx12Engine/core/mesh/: Mesh.cpp  Mesh.hpp
Dx12Engine/core/mesh/bufferManager/: BufferManager.cpp  BufferManager.hpp
Dx12Engine/core/mesh/modelLoader/: ModelLoader.cpp  ModelLoader.hpp
Dx12Engine/core/pipeline/: Pipeline.cpp  Pipeline.hpp
Dx12Engine/core/preloader/: Preloader.cpp  Preloader.hpp
Dx12Engine/core/renderer/: Renderer.cpp  Renderer.hpp
Dx12Engine/core/scene/: Scene.cpp  Scene.hpp
Dx12Engine/core/scene/meshRenderer/: MeshRenderer.cpp  MeshRenderer.hpp
Dx12Engine/core/scene/transform/: Transform.cpp  Transform.hpp
Dx12Engine/core/shader/: Shader.cpp  Shader.hpp
Dx12Engine/core/systemInfoLogger/: SystemInfoLogger.cpp  SystemInfoLogger.h
Dx12Engine/core/window/: Window.cpp  Window.hpp
Dx12Engine/shaders/: PixelShader.hlsl  VertexShader.hlsl
